modificaciones de portada

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -8,18 +8,12 @@
   <form (ngSubmit)="onLogin()">
     <ion-item>
       <ion-label position="floating">Username</ion-label>
-      <ion-input type="text" [(ngModel)]="username" name="username" required></ion-input>
+      <ion-input [(ngModel)]="username" name="username" type="text"></ion-input>
     </ion-item>
-
     <ion-item>
       <ion-label position="floating">Password</ion-label>
-      <ion-input type="password" [(ngModel)]="password" name="password" required></ion-input>
+      <ion-input [(ngModel)]="password" name="password" type="password"></ion-input>
     </ion-item>
-
     <ion-button expand="full" type="submit">Login</ion-button>
   </form>
-
-  <ion-text color="danger" *ngIf="errorMessage">
-    {{ errorMessage }}
-  </ion-text>
 </ion-content>
