--- a/src/app/resetpass/resetpass.page.html
+++ b/src/app/resetpass/resetpass.page.html
@@ -4,7 +4,13 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="ion-padding">
+<ion-content>
+  <!-- Contenedor del logo -->
+  <div class="logo-container">
+    <img src="assets/img/LOGO_FUNDFLOE.jpg" alt="Logo de la App" class="logo" />
+  </div>
+
+  <!-- Formulario para restablecer la contraseña -->
   <form (ngSubmit)="onConfirm()" #resetForm="ngForm">
     <ion-item>
       <ion-label position="floating">Correo Electrónico</ion-label>
