--- a/src/app/newuser/newuser.page.html
+++ b/src/app/newuser/newuser.page.html
@@ -4,30 +4,34 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="ion-padding">
-  <form (ngSubmit)="onSubmit()" #newUserForm="ngForm">
-    <div class="form-container">
-      <ion-item>
-        <ion-label position="floating">Correo Electrónico</ion-label>
-        <ion-input type="email" required [(ngModel)]="email" name="email"></ion-input>
-      </ion-item>
+<ion-content class="main-container">
+  <!-- Contenedor del logo -->
+  <div class="logo-container">
+    <img src="assets/img/LOGO_FUNDFLOE.jpg" alt="Logo de la App" class="logo" />
+  </div>
 
-      <ion-item>
-        <ion-label position="floating">Nombre de Usuario</ion-label>
-        <ion-input type="text" required [(ngModel)]="username" name="username"></ion-input>
-      </ion-item>
+  <!-- Formulario de nuevo usuario -->
+  <form (ngSubmit)="onSubmit()" #newUserForm="ngForm" class="new-container">
+    <ion-item>
+      <ion-label position="floating">Correo Electrónico</ion-label>
+      <ion-input type="email" required [(ngModel)]="email" name="email"></ion-input>
+    </ion-item>
 
-      <ion-item>
-        <ion-label position="floating">Contraseña</ion-label>
-        <ion-input type="password" required [(ngModel)]="password" name="password"></ion-input>
-      </ion-item>
+    <ion-item>
+      <ion-label position="floating">Nombre de Usuario</ion-label>
+      <ion-input type="text" required [(ngModel)]="username" name="username"></ion-input>
+    </ion-item>
 
-      <ion-item>
-        <ion-label position="floating">Confirmar Contraseña</ion-label>
-        <ion-input type="password" required [(ngModel)]="confirmPassword" name="confirmPassword"></ion-input>
-      </ion-item>
+    <ion-item>
+      <ion-label position="floating">Contraseña</ion-label>
+      <ion-input type="password" required [(ngModel)]="password" name="password"></ion-input>
+    </ion-item>
 
-      <ion-button expand="block" type="submit" [disabled]="!newUserForm.valid">Confirmar</ion-button>
-    </div>
+    <ion-item>
+      <ion-label position="floating">Confirmar Contraseña</ion-label>
+      <ion-input type="password" required [(ngModel)]="confirmPassword" name="confirmPassword"></ion-input>
+    </ion-item>
+
+    <ion-button expand="block" type="submit" [disabled]="!newUserForm.valid">Confirmar</ion-button>
   </form>
 </ion-content>
