update boton cancelar

--- a/src/app/resetpass/resetpass.page.html
+++ b/src/app/resetpass/resetpass.page.html
@@ -19,4 +19,8 @@
 
     <ion-button expand="block" type="submit" [disabled]="!resetForm.valid">Confirmar</ion-button>
   </form>
+  
+  <!-- Botón de Cancelar -->
+  <ion-button (click)="cancel()" class="cancel-button">Cancelar</ion-button>
+  
 </ion-content>
