--- a/src/app/newuser/newuser.page.html
+++ b/src/app/newuser/newuser.page.html
@@ -34,4 +34,7 @@
 
     <ion-button expand="block" type="submit" [disabled]="!newUserForm.valid">Confirmar</ion-button>
   </form>
+
+  <!-- Botón de Cancelar -->
+  <ion-button (click)="cancel()" class="cancel-button">Cancelar</ion-button>
 </ion-content>
