--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -23,7 +23,9 @@
 
       <ion-button expand="full" type="submit">Login</ion-button>
     </form>
-    
-    <p class="create-account">¿No tienes cuenta? <a [routerLink]="['/crear-cuenta']">¡Créala!</a></p>
+
+    <p class="create-account">
+      ¿No tienes cuenta? <a [routerLink]="['/crear-cuenta']">¡Créala!</a>
+    </p>
   </div>
 </ion-content>
