--- a/src/app/fundfloe/fundfloe.page.html
+++ b/src/app/fundfloe/fundfloe.page.html
@@ -1,13 +1,32 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>fundfloe</ion-title>
+    <ion-title>FUNDFLOE</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">fundfloe</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content class="ion-padding">
+  <div class="welcome-container">
+    <p>Bienvenido Sr/a: {{ username }}</p>
+  </div>
+
+  <div class="icons-container">
+    <ion-grid>
+      <ion-row>
+        <ion-col size="4" *ngFor="let icon of icons">
+          <ion-card>
+            <ion-card-content>
+              <ion-icon [name]="icon.name" class="icon"></ion-icon>
+              <p>{{ icon.title }}</p>
+            </ion-card-content>
+          </ion-card>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </div>
 </ion-content>
+
+<ion-footer>
+  <ion-toolbar>
+    <ion-button expand="full" (click)="logout()">Cerrar Sesión</ion-button>
+  </ion-toolbar>
+</ion-footer>
