arreglo de algunos problemas

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -25,7 +25,7 @@
     </form>
 
     <p class="create-account">
-      ¿No tienes cuenta? <a [routerLink]="['/crear-cuenta']">¡Créala!</a>
+      ¿No tienes cuenta? <ion-button [routerLink]="['/crear-cuenta']">¡Créala!</ion-button>
     </p>
   </div>
 </ion-content>
