Creo que hay varios puntos listos jeje

--- a/src/app/portada/portada.page.html
+++ b/src/app/portada/portada.page.html
@@ -9,8 +9,9 @@
 
 <ion-content id="main-content" class="white-background">
   <div class="header-section">
-    <h2 class="welcome-message">¡Bienvenido!</h2>
-    <p class="subtitle">Toma el control de tus finanzas este mes.</p>
+    <!-- Aquí mostramos el nombre del usuario -->
+    <h2 class="welcome-message">¡Bienvenido, {{ username }}!</h2>
+    <p class="subtitle">Toma el control de tus finanzas.</p>
   </div>
 
   <!-- Sección para ingresar montos y realizar conversiones -->
