cambios realizados en la API

--- a/src/app/portada/portada.page.html
+++ b/src/app/portada/portada.page.html
@@ -9,7 +9,7 @@
 
 <ion-content id="main-content" class="white-background">
   <div class="header-section">
-    <!-- Aquí mostramos el nombre del usuario -->
+    <!-- Mostrar el saludo de bienvenida -->
     <h2 class="welcome-message">¡Bienvenido, {{ username }}!</h2>
     <p class="subtitle">Toma el control de tus finanzas.</p>
   </div>
@@ -48,6 +48,7 @@
     </ion-card-content>
   </ion-card>
 
+  <!-- Botones para navegar a otras páginas -->
   <ion-button expand="full" class="action-button" (click)="navigateTo('gastos')">
     Ver Gastos
   </ion-button>
