--- a/src/app/resetpass/resetpass.page.html
+++ b/src/app/resetpass/resetpass.page.html
@@ -10,16 +10,16 @@
     <img src="assets/img/LOGO_FUNDFLOE.jpg" alt="Logo de la App" class="logo" />
   </div>
 
-  <!-- Formulario para restablecer la contraseña -->
-  <form (ngSubmit)="onConfirm()" #resetForm="ngForm">
-    <ion-item>
-      <ion-label position="floating">Correo Electrónico</ion-label>
-      <ion-input type="email" required email [(ngModel)]="email" name="email"></ion-input>
-    </ion-item>
-
-    <ion-button expand="block" type="submit" [disabled]="!resetForm.valid">Confirmar</ion-button>
-  </form>
-
+  <ion-content>
+    <form (ngSubmit)="resetPassword()">
+      <ion-item>
+        <ion-label position="floating">Nombre de usuario</ion-label>
+        <ion-input [(ngModel)]="username" name="username" required></ion-input>
+      </ion-item>
+      <ion-button expand="block" type="submit">Recuperar</ion-button>
+    </form>
+  </ion-content>
+  
   <!-- Botón de Cancelar -->
   <ion-button expand="block" fill="clear" (click)="cancel()" class="cancel-button">Cancelar</ion-button>
 
