--- a/src/app/portada/portada.page.html
+++ b/src/app/portada/portada.page.html
@@ -64,11 +64,11 @@
 <!-- Navbar en la parte inferior -->
 <ion-footer>
   <ion-tab-bar slot="bottom">
-    <ion-tab-button (click)="navigateTo('maps')">
+    <ion-tab-button (click)="navigateToMaps()">
       <ion-icon name="map-outline"></ion-icon>
       <ion-label>Mapa</ion-label>
     </ion-tab-button>
-    <ion-tab-button (click)="navigateTo('profile')">
+    <ion-tab-button (click)="navigateToProfile()">
       <ion-icon name="person-outline"></ion-icon>
       <ion-label>Perfil</ion-label>
     </ion-tab-button>
